# fable

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  probe_or.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: claude.yml
demo/: fable.tape  seed_demo.py
docs/: 2026-06-16-fable-auto-rules-design.md  ARCHITECTURE.md
docs/plans/: 2026-06-15-tag-carding.md
fable/: __init__.py  cards.py  cli.py  compose.py  curate.py  dashboard.html  db.py  discover.py  embeddings.py  export.py  extract.py  facts.py  filetime.py  gate.py  graph.py  hook.py  indexer.py  jsonl.py  mcp.py  ner.py  openrouter.py  paths.py  providers.py  prune.py  recall.py  rules.py  serve.py  setup.py  slimmers.py  surgery.py  tasktime.py  taxonomy.py  terms.py  vaultgc.py
fable_recall.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
reference/: arc-memory-README.md  prune_transcript_v1.py  seed-cards.json
scripts/: benchmark.py  strip_images.py
tests/: helpers.py  test_autoprune.py  test_backfill_queue.py  test_cards.py  test_cli.py  test_compose.py  test_curate.py  test_discover.py  test_embeddings.py  test_extract.py  test_features.py  test_filetime.py  test_hardening.py  test_hook.py  test_index_live_tail.py  test_indexer.py  test_jsonl.py  test_mcp.py  test_openrouter.py  test_providers_features.py  test_prune.py  test_recall.py  test_serve.py  test_setup.py  test_slimmers.py  test_terms.py  test_vaultgc.py
(+3 files in other folders)
