[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fable-recall"
version = "0.1.0"
description = "High-fidelity transcript memory for Claude Code: index every session, recall byte-identical, search, prune, surgery, compose."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "Anoop Grover"}]
keywords = ["claude-code", "transcripts", "memory", "mcp", "sqlite",
            "context", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/grooverLab/fable"
Issues = "https://github.com/grooverLab/fable/issues"

[project.scripts]
fable = "fable.cli:main"

[tool.setuptools]
packages = ["fable"]

[tool.setuptools.package-data]
fable = ["dashboard.html"]
